# robotics-transformer

./: .gitignore  README.md  _verify.py  pyproject.toml  requirements.txt  train.py
robotics_transformer/configs/: default.py
robotics_transformer/data/: synthetic_dataset.py  tfds_rlds_iterable.py  transforms.py  windowing.py
robotics_transformer/models/: film.py  film_efficientnet_b3.py  policy.py  token_learner.py  transformer_decoder.py
robotics_transformer/tokenizers/: action_bounds.py  action_tokenizer.py
robotics_transformer/training/: losses.py  trainer.py
robotics_transformer/utils/: seed.py  shapes.py
scripts/: smoke_test_dataset.py  smoke_test_forward.py  smoke_test_trainbc.py  somke_test_trainbc.py
tests/: test_action_tokenizer.py  test_rt1_forward_shapes.py  test_token_learner_shapes.py  test_transformer_causal_mask.py
