[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robotics-transformer"
version = "0.1.0"
description = "RT-1 reproduction with PyTorch"
readme = "README.md"
authors = [{ name = "mrtanke" }]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "torchvision>=0.17",
    "einops>=0.7",
    "numpy>=1.24",
    "tqdm>=4.65",
]

[tool.setuptools.packages.find]
include = ["robotics_transformer*"]
